--- a/test.html
+++ b/test.html
@@ -8,6 +8,6 @@
 	<p>Hey. I'm a <b>paragraph</b> element.</p>
 	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
 	<p>My name is: <br> Daniel</p>
-	<img src="img/Raizman_Headshot.jpeg">
+	<img src="img/Raizman_Headshot_Small.jpg">
 </body>
 </html>
