Made several stylistic updates

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Daniel Raizman</title>
+	<link rel="icon" href="img/Raizman_Headshot_Small.jpg">
 </head>
 <body>
 	<!-- header element -->
@@ -13,25 +14,29 @@
 	<!-- main element -->
 	<main>
 		<h2>About Daniel</h2>
-		<p>He's a Manager at AIR Worldwide</p>
+		<p>He's an avid golfer</p>
 		<img src="img/Cabot.jpg">
-		<p>Cabot Golf</p>
+		<h2>Cabot Cliffs</h2>
 		<ul>
-			<li><a href="https://www.cabotlinks.com/golf/cabot-cliffs/">Cabot Cliffs</a></li>
+			<li><a href="https://www.cabotlinks.com/golf/cabot-cliffs/">Explore the Course</a></li>
 		</ul>
 				<ul>
-			<li><a href="https://www.google.com/travel/flights/search?tfs=CBwQAhojagwIAhIIL20vMDFjeF8SCjIwMjEtMDctMTRyBwgBEgNZSFoaI2oHCAESA1lIWhIKMjAyMS0wNy0xN3IMCAISCC9tLzAxY3hfcAGCAQsI____________AUABSAGYAQE">Flights</a></li>
+			<li><a href="https://www.google.com/travel/flights/search?tfs=CBwQAhojagwIAhIIL20vMDFjeF8SCjIwMjEtMDctMTRyBwgBEgNZSFoaI2oHCAESA1lIWhIKMjAyMS0wNy0xN3IMCAISCC9tLzAxY3hfcAGCAQsI____________AUABSAGYAQE">Fly There!</a></li>
 		</ul>
-		<h2>Perils</h2>
+		<h3>Highlights</h3>
 		<ol>
-			<li>Hurricanes</li>
-			<li>Earthquakes</li>
+			<li>Courses</li>
+			<li>Best Holes</li>
+			<li>Food and Drink</li>
+			<li>Caddies</li>
 		</ol>
-		
-
-
-
 	</main>
 
+	<!-- footer element -->
+	<footer>
+		<p> This site was created by Daniel Raizman. 
+			<br> &copy;2021
+		</p>
+	</footer>
 </body>
 </html>
