Major Formatting Edits

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<title>Daniel Raizman</title>
 	<link rel="icon" href="img/Raizman_Headshot_Small.jpg">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/golf.css">
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/Raizman_Headshot_Small.jpg">
+		<img src="img/Raizman_Headshot_Small.jpg" width="300" height="300">
 		<h1>Daniel Raizman</h1>
 	</header>
 
@@ -15,8 +18,10 @@
 	<main>
 		<h2>About Daniel</h2>
 		<p>He's an avid golfer</p>
-		<img src="img/Cabot.jpg">
 		<h2>Cabot Cliffs</h2>
+		<img src="img/Cabot.JPG">
+		<p class="caption">View from behind #2 green
+		
 		<ul>
 			<li><a href="https://www.cabotlinks.com/golf/cabot-cliffs/">Explore the Course</a></li>
 		</ul>
