--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- main element -->
 	<main>
 		<h2>About Daniel</h2>
-		<p>He's an avid golfer</p>
+		<p>He's an avid golfer.</p>
 		<h2>Cabot Cliffs</h2>
 		<img src="img/Cabot.JPG">
 		<p class="caption">View from behind #2 green
