--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
 	<link rel="stylesheet" type="text/css" href="css/golf.css">
 </head>
 <body>
+
 	<!-- header element -->
 	<header>
 		<img src="img/Raizman_Headshot_Small.jpg" width="300" height="300">
 		<h1>Daniel Raizman</h1>
+		<blockquote>"Play it as it lies."</blockquote>
 	</header>
 
 	<!-- main element -->
 	<main>
 		<h2>About Daniel</h2>
 		<p>He's an avid golfer.</p>
+
+	
 		<h2>Cabot Cliffs</h2>
 		<img src="img/Cabot.JPG">
 		<p class="caption">View from behind #2 green
 		
+			</div>	
 		<ul>
 			<li><a href="https://www.cabotlinks.com/golf/cabot-cliffs/">Explore the Course</a></li>
 		</ul>
