--- a/twocol.html
+++ b/twocol.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Two Columns</title>
+	<link rel="icon" href="img/Raizman_Headshot_Small.jpg">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -20,7 +21,7 @@
 					<h1><a href="https://www.tripsavvy.com/thmb/g5onirjXoOjijj-bQ8lYHdGPTDc=/2072x1447/filters:fill(auto,1)/GettyImages-541362624-5af20f4643a1030036a0545f.jpg">Travel</a></h1>
 
 				</div>
-				
+
 			</div>
 
 			<div class="col-md-6 no-gutters">
